# RVault

./: CMakeLists.txt  README.md  TODO.todo  main.c  rvault_crypto.c  rvault_crypto.h  rvault_platform.h  rvault_random.c  rvault_random.h  test.rvault  weeklygoals.txt
src/: ToRemember
src/headers/: rvault_auth.h  rvault_constants.h  rvault_crypto.h  rvault_exception.h  rvault_file.h  rvault_fileio.h  rvault_platform.h  rvault_random.h  rvault_salt.h  rvault_session.h  rvault_ui.h  rvault_vault.h  rvault_vault_entry.h  salt.h
src/source/: rvault_auth.c  rvault_auth.cpp  rvault_crypto.c  rvault_exception.cpp  rvault_file.cpp  rvault_fileio.cpp  rvault_main.cpp  rvault_platform.c  rvault_random.c  rvault_salt.cpp  rvault_session.cpp  rvault_ui.cpp  rvault_vault_entry.cpp
testFiles/: test.txt  testing.rvault
